--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,27 +13,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4  # Check out the repository code
           
-      - name: Setup Bitcoin Core
+      - name: Setup, Get Block & Verify Submissions
         run: |
+          # Setup Bitcoin Core
           sudo bash .github/setup.sh
 
-      - name: Get latest block in signet mode
-        run: |
-            bitcoin-cli getblockhash 243833
-
-      - name: 01.sh - Verify Hash Block
-        run: |
-            chmod +x submission/01.sh
-            HASH=$(submission/01.sh)
-            if [[ "$HASH" == "000000b024f11595795f0be5974229f786df389c8b92e92b61890e9e3c6b8d8a" ]]; then
-              echo "✅ Success: Verify Hash Block passed!"
-            else
-              echo "❌ Error: Verify Hash Block failed!"
-              exit 1
-            fi
-
-      - name: 02.sh - Verify Input Count
-        run: |
+          # Verify block is accessible
+          echo "Fetching block chain info..."
+          bitcoin-cli getblockchaininfo
+      
+          # Verify block is accessible
+          echo "Fetching block hash for height 243833..."
+          bitcoin-cli -signet getblockhash 243833
+      
+          # Run and verify 01.sh
+          chmod +x submission/01.sh
+          HASH=$(submission/01.sh)
+          if [[ "$HASH" == "000000b024f11595795f0be5974229f786df389c8b92e92b61890e9e3c6b8d8a" ]]; then
+            echo "✅ Success: Verify Hash Block passed!"
+          else
+            echo "❌ Error: Verify Hash Block failed!"
+            exit 1
+          fi
+      
+          # 02.sh - Verify Input Count
           chmod +x submission/02.sh
           COUNT=$(submission/02.sh)
           if [[ "$COUNT" == "442" ]]; then
@@ -43,8 +46,7 @@ jobs:
             exit 1
           fi
       
-      - name: 03.sh - Verify Transaction
-        run: |
+          # 03.sh - Verify Transaction
           chmod +x submission/03.sh
           TX=$(submission/03.sh)
           EXPECTED=0e302b600d32b86c3362647f422e5605165a1e5c89c760d0d972e102f390c84e
@@ -54,9 +56,8 @@ jobs:
             echo "❌ Error: Transaction verification failed!"
             exit 1
           fi
-          
-      - name: 04.sh - Verify Public Key Signer
-        run: |
+      
+          # 04.sh - Verify Public Key Signer
           chmod +x submission/04.sh
           PUBKEY=$(submission/04.sh)
           EXPECTED_OUTPUT=02c6c9306ade30f9711c9503cdaa94094efc025acb9be7845acc49e1cb475952c6
@@ -67,30 +68,27 @@ jobs:
             exit 1
           fi
       
-      - name: 05.sh - Verify TX Fee
-        run: |
+          # 05.sh - Verify TX Fee
           chmod +x submission/05.sh
           FEE=$(submission/05.sh)
           if [[ "$FEE" == "696" ]]; then
-            echo "✅ Success: TX Fee verification passed!"
+            echo "✅ Success: TX Fee (05.sh) verification passed!"
           else
-            echo "❌ Error: TX Fee verification failed!"
+            echo "❌ Error: TX Fee (05.sh) verification failed!"
             exit 1
           fi
-
-      - name: 06.sh - Verify TX Fee
-        run: |
+      
+          # 06.sh - Verify TX Fee (again)
           chmod +x submission/06.sh
           FEE=$(submission/06.sh)
           if [[ "$FEE" == "696" ]]; then
-            echo "✅ Success: TX Fee verification passed!"
+            echo "✅ Success: TX Fee (06.sh) verification passed!"
           else
-            echo "❌ Error: TX Fee verification failed!"
+            echo "❌ Error: TX Fee (06.sh) verification failed!"
             exit 1
           fi
-
-      - name: 07.sh - Verify Coinbase TX
-        run: |
+      
+          # 07.sh - Verify Coinbase TX
           chmod +x submission/07.sh
           COINBASE=$(submission/07.sh)
           EXPECTED_OUTPUT=7ab200e41b53d974f757535c01a715aae6b1322a30753c1d2b0ea201500bc060
@@ -100,9 +98,8 @@ jobs:
             echo "❌ Error: Coinbase TX verification failed!"
             exit 1
           fi
-
-      - name: 08.sh - Verify TX Block Height
-        run: |
+      
+          # 08.sh - Verify TX Block Height
           chmod +x submission/08.sh
           HEIGHT=$(submission/08.sh)
           if [[ "$HEIGHT" == "243859" ]]; then
@@ -111,3 +108,4 @@ jobs:
             echo "❌ Error: TX Block Height verification failed!"
             exit 1
           fi
+      
